Creating table of truck factor process.